<resources>
    <string name="app_name" translatable="false">RacoPocket</string>

    <string name="title_activity_login" translatable="false">Login</string>

    <!-- Main Activity Strings -->
    <string name="fib_upc" translatable="false">Facultat d\'Informàtica de Barcelona - Universitat Politècnica de Catalunya</string>

    <!-- Strings related to login -->
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_title">Downloading necessary data</string>
    <string name="login_failed">Something went wrong, check your connection and try it again</string>

    <!-- Strings related to Main Menu -->
    <string name="welcome">Welcome</string>

    <string name="nav_group1">Menu</string>

    <string name="nav_timetable">Timetable</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_class_availability">Class Availability</string>
    <string name="nav_subject_info">Subject Information</string>
    <string name="nav_uni_map">University Map</string>

    <string name="nav_group2">Other cool features</string>

    <string name="nav_share">Share</string>
    <string name="nav_about">About</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">LogOut</string>

    <string name="back_button_confirmation">Press back again to exit</string>

    <!-- Strings related to Timetable -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>

    <!-- Strings related to Class Availability -->
    <string name="last_update">Classroom building maps can show outdated data. Last update appears on top-left corner.</string>
    <string name="class_name">Classroom</string>
    <string name="class_availability">Free places</string>

    <!-- Strings related to Subject Info -->
    <string name="write_subject_initials">Write subject initials</string>
    <string name="search">Search</string>

    <string name="empty_field">Type something to search</string>
    <string name="data_remove_ok">Data removed successfully</string>
    <string name="data_remove_fail">Error while trying to remove the data</string>

    <string name="refresh_image_button">Refresh</string>
    <string name="delete_image_button">Delete</string>
    <string name="connection_image_button">Connection</string>

    <string name="connection_problems">Service temporarily unavailable, try again later.</string>
    <string name="data_not_found">Data not found</string>

    <string name="credits">Credits</string>
    <string name="description_objectives">Description and objectives</string>
    <string name="bibliography">Bibliography</string>

    <!-- -->
    <string name="title_activity_main_menu" translatable="false">MainMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="new_language">Language set to english</string>
    <string name="delete_data">Delete all data</string>

    <!-- About -->
    <string name="raco_title">Racó for Android</string>
    <string name="version">Version</string>
    <string name="description_about"><b>RacóPocket</b> is an OpenSource project created by
        <b><a href="https://es.linkedin.com/in/josep-de-cid-rodr%C3%ADguez">Josep de Cid</a></b> and
        <b><a href="https://es.linkedin.com/in/pau-risa-7ba98aba">Pau Risa</a></b>, oriented to FIB - UPC students.
        Feel free to take a look at our <b><a href="https://github.com/JosepRivaille/RacoPocket">Github</a></b>
        public repository and contribute.</string>

    <!-- Settings -->
    <string name="nav_language">Language</string>
    <string name="description_language">Change application language.</string>

    <string name="storage">Storage</string>
    <string name="automatic_update">Automatic update</string>
    <string name="automatic_update_description">Enable automatic periodically updates.</string>
    <string name="network_usage">Network Usage</string>
    <string name="network_usage_description">Change update frequency on volatile data like notifications, schedule and class availability.</string>

    <string name="never_update">Never (Update manually)</string>
    <string name="weekly_update">Once a week</string>
    <string name="daily_update">Once a day</string>
    <string name="when_open_update">Update each time we access the feature</string>

    <string name="update_data">Update all data</string>
    <string name="update_data_title">Downloading necessary data</string>
    <string name="update_data_description">Update all application data (Recommended each time you start a new course).</string>
    <string name="update_data_text">All data will be updated, and this can use a few MB of internet. We recommend you to enable your Wi-Fi connection.</string>
    <string name="update_data_successful">All data have been successfully updated</string>
    <string name="update_data_unsuccessful">Something went wrong, check your connection and try it again</string>
    <string name="continue_dialog">Continue</string>
    <string name="cancel_dialog">Cancel</string>

    <string name="reports">Report bugs</string>
    <string name="reports_mail">E-mail</string>
    <string name="reports_mail_description">Send us a mail explaining us your problem.</string>
    <string name="reports_github">GitHub</string>
    <string name="reports_github_description">Open an issue on Github to ease our job.</string>

</resources>
