<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/nav_language"
        android:key="languageCategory">

        <ListPreference
            android:title="@string/nav_language"
            android:summary="@string/description_language"
            android:key="language"
            android:defaultValue="1"
            android:entries="@array/languages_array"
            android:entryValues="@array/languages_array_values" />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/storage">

        <CheckBoxPreference
            android:key="enableAutomaticUpdates"
            android:title="@string/automatic_update"
            android:summary="@string/automatic_update_description"
            android:defaultValue="false">
        </CheckBoxPreference>

        <Preference
            android:key="applicationUpdates"
            android:title="@string/network_usage"
            android:summary="@string/network_usage_description"/>

        <Preference
            android:key="applicationDataUpdate"
            android:title="@string/update_data"
            android:summary="@string/update_data_description">

        </Preference>

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/reports">

        <Preference
            android:key="reportViaMail"
            android:title="@string/reports_mail"
            android:summary="@string/reports_mail_description">
            <intent
                android:action="android.intent.action.SEND" />
        </Preference>

        <Preference
            android:key="reportViaGithub"
            android:title="@string/reports_github"
            android:summary="@string/reports_github_description">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.upc.fib.racopocket"
                android:targetClass="com.upc.fib.racopocket.SettingsActivity" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>