<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:title="@string/nav_group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_access_time_black"
            android:title="@string/nav_timetable" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_plus_one_black"
            android:title="@string/nav_notifications" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_today_black"
            android:title="@string/nav_schedule" />
        <item
            android:id="@+id/nav_class_availability"
            android:icon="@drawable/ic_desktop_mac_black"
            android:title="@string/nav_class_availability" />
        <item
            android:id="@+id/nav_subject_info"
            android:icon="@drawable/ic_zoom_in_black"
            android:title="@string/nav_subject_info" />
    </group>

    <item android:title="@string/nav_group2">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_build_black_24dp"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_person_black"
                android:title="@string/nav_about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_cancel_black"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
